k8s/apps/status-page/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-page-api
  labels:
    app: status-page-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status-page-api
  template:
    metadata:
      labels:
        app: status-page-api
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - vps
      containers:
        - name: api
          image: ghcr.io/upayanmazumder/status-page/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
