k8s/apps/status-page/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page-api
spec:
  selector:
    app: status-page-api
  ports:
  - port: 5000
    targetPort: 5000
